@@ -6,9 +6,9 @@ class TestConditionsProcessRunning < Test::Unit::TestCase
       c = Conditions::ProcessRunning.new
       c.running = r
     
-      c.stubs(:watch).returns(stub(:pid_file => ''))
+      c.stubs(:watch).returns(stub(:pid_file => '', :name => 'foo'))
     
-      assert_equal !r, c.test
+      no_stdout { assert_equal !r, c.test }
     end
   end
   
